1 Update index.html
Introduction

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Joss's Website</title>
+    <title>Short Documentary by Joss Alvarado</title>
   </head>
   <body>
-    <h1>Simple Website Heading that I changed </h1>
-    <p>This is an example paragraph. Anything in the <strong>bold text</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <h1>The Permanence of Movement</h1>
+    <p><strong>The Permanence of Movement</strong> or <em>"La Permanencia del Movimiento"</em> in its original spanish title, <strong>is a short documentary film</strong> written and directed by Joss Alvarado produced in March, 2025.</p>
   </body>
 </html>
