--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>The Permanence of Movement</h1>
-    <p><strong>The Permanence of Movement</strong> or <em>"La Permanencia del Movimiento"</em> in its original spanish title, <strong>is a short documentary film</strong> written and directed by Joss Alvarado produced in March, 2025.</p>
+    <p><strong>The Permanence of Movement</strong> or <em>"La Permanencia del Movimiento"</em> in its original spanish title, 
+      <strong>is a short documentary film</strong> written and directed by Joss Alvarado, produced in March, 2025.</p>
   </body>
 </html>
