3 Update index.html
Color head 1

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Short Documentary by Joss Alvarado</title>
   </head>
   <body>
-    <h1>The Permanence of Movement</h1>
-    <p><strong>The Permanence of Movement</strong> or <em>"La Permanencia del Movimiento"</em> in its original spanish title, 
-      <strong>is a short documentary film</strong> written and directed by Joss Alvarado, produced in March, 2025.</p>
+    <h1 style="color:1000BD;">The Permanence of Movement</h1>
+    <p><strong>The Permanence of Movement</strong> or <em>"La Permanencia del Movimiento"</em> in its original spanish title,</p>
+    <p><strong>is a short documentary film</strong> written and directed by Joss Alvarado, produced in March, 2025.</p>
   </body>
 </html>
