--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Short Documentary by Joss Alvarado</title>
   </head>
   <body>
-    <h1 style="color: #1000BD">The Permanence of Movement</h1>
+    <center>
+    <h1 style="color: #1000BD">The Permanence of Movement</h1> 
+      </center>
     <p><strong>The Permanence of Movement</strong> or <em>"La Permanencia del Movimiento"</em> in its original spanish title, <strong>is a short documentary film</strong> written and directed by Joss Alvarado, produced in March, 2025.</p>
     <h2>Synopsis</h2>
     <p>"The Permanence of Movement" is a short documentary film that showcases the professional career of Joselyn, a restorer and conservator of analog film who lives in Guadalajara, Mexico.</p>
@@ -14,11 +16,8 @@
     <p>The AVS is working towards the creation of a Film Archive that fulfills the essential functions of an audiovisual archive, supporting the decentralization of specialized archives concentrated in the nation's capital. This project continues the vision of film critic and historian Emilio García Riera, who laid a solid foundation for cinema in Guadalajara through the founding of the CIEC (Center for Research and Cinematographic Studies), whose archival vocation and documentary legacy were inherited by the AVS.</p>
     <p>Through these proposals, Joselyn defends the importance of preserving local and regional audiovisual memory as a responsibility and necessity for the community. Moving images and sound move through time, toward new formats and technologies, toward future generations and cultural horizons. Preservation seeks to keep the cinema in constant movement.</p>
     <h3>Watch here</h3>
-    <p><em>La Permanencia del Movimiento</em> 
-      Guadalajara México. 2025.
-      Spanish, with English subtitles.
-      Color and B&W.
-      Duration: 00:15:37 </p>
+    <p><em>La Permanencia del Movimiento</em>by Joss Alvarado.</p>
+    <p>Guadalajara México. 2025. Spanish, with English subtitles. Color and B&W. Duration: 00:15:37</p>
     <p><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1114736920?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;autoplay=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="La_Permanencia_del_Movimiento_sub(1080p)"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></p>
   </body>
 </html>
